# Agies---password-manager

./: .babelrc  .gitignore  AGIES_DEPLOYMENT_COMPLETE.md  BABEL_BUILD_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  MAZE_PASSWORD_MANAGER_README.md  MIME_ERROR_FIX_README.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_README.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  SECURITY_FEATURES_GUIDE.md  SETUP.md  demo.js  deploy-maze.sh  deploy-now.sh  deploy-render.sh  docker-compose.yml  index.html  netlify.toml  package-lock.json  package.json  render.yaml  requirements.txt  start-dev.sh  tailwind.config.js  test-file-loading.html  test-syntax.js  test_system.py  tsconfig.json  vercel.json  vite.config.ts  wsgi.py
.github/workflows/: deploy.yml
.vercel/: project.json
backend/: agies.db  app.py  app.py.backup  app_working.py  gunicorn.conf.py  requirements.txt  test_app.py
chrome-extension/: content.js  import.js  popup.js
database/: schema.sql  setup-database.sh
deploy/: Dockerfile.prod  deploy.sh  docker-compose.prod.yml  production-setup.sh  quick-deploy.sh
desktop/: package.json  tauri-setup.md
desktop-app/: README.md  package.json
desktop-app/src-tauri/: tauri.conf.json
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: main.rs
mobile/: App.tsx  android-setup.md  ios-setup.md  package.json  setup-mobile.sh
mobile-app/: App.js  README.md  package.json
mobile/src/screens/: AuthScreen.tsx
public/: _redirects  admin-dashboard.html  app-store-guide.html  dark-web-monitor.html  dashboard-working.html  dashboard.html  demo.html  go-to-market.html  index-simple.html  index.html  login.html  marketing-strategy.html  marketing.html  maze-password-manager.html  offline.html  onboarding.html  payment-success.html  pricing.html  security-dashboard-working.html  security-dashboard.html  security.html  styles.css  sw.js  test-dashboard.html  test-security.html  vault-details.html  vault-interface.html  vaults.html
public/chrome-extension/: README.md  agies-overlay.css  autofill.js  background.js  form-detector.js  import.js  manifest.json  popup.html  test-extension.html
public/js/: 2fa-manager.js  activity-monitor.js  advanced-reporting.js  advanced-security.js  agies-api.js  agies-app.js  analytics.js  api-service.js  app.js  auth-service.js  auth.js  components.js  comprehensive-testing.js  dark-web-monitor.js  dashboard.js  database-service.js  device-manager.js  enhanced-features.js  icon-service.js  indian-payment-gateways.js  login-manager.js  login.js  maze-password-manager.js  password-health-analyzer.js  payment-processor.js  performance-optimizer.js  real-2fa.js  real-ai-security.js  real-dark-web-monitoring.js  real-encryption.js  real-import.js  real-security-data.js  real-sync.js  rest-api.js  security-dashboard-simple.js  security-dashboard.js  security-demo.js  security.js  seo-optimizer.js  sso-integration.js  (+5 more)
public/js/ai/: enhanced-ai-guardian.js
public/js/chakravyuham/: maze-engine.js
public/js/config/: database.js
public/js/security/: enhanced-chakravyuham-engine.js
public/js/services/: dark-web-monitor.js  enhanced-encryption.js  honeytoken-service.js  one-way-entry-service.js  vault-management-service.js
render-deployment/: render.yaml  requirements.txt
scripts/: deploy-agies.sh  setup-database.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/ai/: enhanced-ai-guardian.ts  guardian.ts
src/backend/: enhanced-production-server.ts  index.ts  production-server.ts  simple-server.ts
src/config/: database.ts
src/core/: types.ts
src/frontend/: App.css  App.tsx  index.css  tsconfig.json
src/frontend/components/: Dashboard.tsx  Login.tsx  Navbar.tsx  Register.tsx  Security.tsx  Vault.tsx
src/frontend/contexts/: AuthContext.tsx  SecurityContext.tsx
src/security/: enhanced-chakravyuham-engine.ts  maze-engine.ts
src/services/: dark-web-monitor.ts  encryption.ts  enhanced-encryption.ts  honeytoken-service.ts  one-way-entry-service.ts  userService.ts  vault-management-service.ts
temp-js/ai/: enhanced-ai-guardian.js
temp-js/config/: database.js
temp-js/security/: enhanced-chakravyuham-engine.js
temp-js/services/: dark-web-monitor.js  encryption.js  enhanced-encryption.js  honeytoken-service.js  one-way-entry-service.js  userService.js  vault-management-service.js
