[package]
name = "agies-desktop"
version = "1.0.0"
description = "Agies - The Maze Vault Password Manager (Desktop Application)"
authors = ["Agies Team"]
license = "MIT"
repository = ""
default-run = "agies-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
  "api-all",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-copy-file",
  "fs-create-dir",
  "fs-remove-dir",
  "fs-remove-file",
  "fs-rename-file",
  "fs-exists",
  "http-all",
  "notification-all",
  "shell-open",
  "dialog-all",
  "path-all",
  "process-relaunch",
  "process-exit",
  "window-all",
  "system-tray"
] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.29", features = ["bundled"] }
dirs = "5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
